--- a/scss/styles.css
+++ b/scss/styles.css
@@ -27,6 +27,7 @@ h2 {
 }
 
 .btn {
+  display: inline-block;
   padding: 20px 30px;
   text-transform: uppercase;
   letter-spacing: 3px;
@@ -56,6 +57,7 @@ h2 {
 }
 
 #showcase {
+  text-align: center;
   background: url("/img/showcase.jpg");
   background-position: center;
   background-size: cover;
@@ -63,13 +65,7 @@ h2 {
   height: 100vh;
 }
 #showcase .button-1 {
-  margin: 0 auto;
-  display: flex;
-  align-items: center;
-  align-self: center;
-  justify-content: center;
-  justify-self: center;
-  margin-top: 30em;
+  margin-top: 20em;
 }
 
 #projects h2 {
@@ -84,12 +80,15 @@ h2 {
 
 #about h2 {
   text-align: center;
+  font-weight: 500;
+  font-size: 1.8rem;
 }
 #about .about-row {
   display: flex;
 }
 #about .about-row .about-experience {
   width: 100%;
+  margin-left: 50px;
 }
 #about .about-row .about-experience h2 {
   text-align: left;
