--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -31,6 +31,7 @@ h2 {
 }
 
 .btn {
+    display: inline-block;
     padding: 20px 30px;
     text-transform: uppercase;
     letter-spacing: 3px;
@@ -67,6 +68,7 @@ color: red;
 }
 
 #showcase {
+    text-align: center;
     background: url("/img/showcase.jpg");
     background-position: center;
     background-size:cover;
@@ -75,13 +77,11 @@ color: red;
 
     .button-1 {
 
-        margin: 0 auto;
-        display: flex;
-        align-items: center;
-        align-self: center;
-        justify-content: center;
-        justify-self: center;
-        margin-top: 30em;
+        
+    
+     
+    
+        margin-top: 20em;
     }
 }
 
@@ -111,6 +111,8 @@ color: red;
     h2 {
 
         text-align: center;
+        font-weight: 500;
+        font-size: 1.8rem;
     }
 
     .about-row {
@@ -119,11 +121,16 @@ color: red;
        
         
         .about-experience {
+            width: 100%;
+            margin-left: 50px;
+           
+          
             h2 {
-
+                
                 text-align: left;
             }
-            width: 100%;
+
+            
         }
 
         .about-me {
